<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.detailsCars.DetailsFragmentCar">

    <TextView
        android:id="@+id/txt_CarFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fac_marca"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_CarFab_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/txt_CarFab"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_CarName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_car"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_CarFab"/>

    <TextView
        android:id="@+id/txt_CarName_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/txt_CarFab"
        app:layout_constraintTop_toBottomOf="@id/txt_CarFab"/>

    <TextView
        android:id="@+id/txt_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_car"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_CarName"/>

    <TextView
        android:id="@+id/txt_CarYear_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/txt_CarFab"
        app:layout_constraintTop_toTopOf="@id/txt_year"/>

    <TextView
        android:id="@+id/txt_gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gas"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_year"/>

    <TextView
        android:id="@+id/txt_CarGas_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/txt_CarFab"
        app:layout_constraintTop_toTopOf="@id/txt_gas"/>

    <TextView
        android:id="@+id/txt_num_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_port"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_gas"/>

    <TextView
        android:id="@+id/txt_CarPort_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/txt_num_port"
        app:layout_constraintTop_toTopOf="@id/txt_num_port"/>

    <TextView
        android:id="@+id/txt_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_num_port"/>

    <TextView
        android:id="@+id/txt_CarColor_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/txt_color"
        app:layout_constraintTop_toTopOf="@id/txt_color"/>

    <TextView
        android:id="@+id/txt_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_fipe"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_color"/>

    <TextView
        android:id="@+id/txt_CarValor_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/txt_valor"
        app:layout_constraintTop_toTopOf="@id/txt_valor"/>

    <Button
        android:id="@+id/bt_getIt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getIt"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>