<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.favoriteCar.FavoriteCarFragment">

    <TextView
        android:id="@+id/txtName_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_car"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtYear_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_car"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtName_car"
        app:layout_constraintEnd_toStartOf="@id/txtPrice"/>

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/price_car"
        android:layout_marginTop="8dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="@id/txtYear_car"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_list"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/txtPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>